--- a/chromeExtenstion/manifest.json
+++ b/chromeExtenstion/manifest.json
@@ -4,6 +4,10 @@
     "version": "1.0",
     "description": "collecting data and saving it to database.",
     "author": "Gaurav Goyal",
+    "permissions": ["storage"],
+    "background": {
+        "service_worker": "background.js"
+    },
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
